--- a/css/shared.css
+++ b/css/shared.css
@@ -126,7 +126,9 @@ section {
     width: 100%;
     position: fixed;
     z-index: 100;
+    /*
     background-color: rgba(255, 255, 255, 0.5);
+    */
 }
 
 /* ============================================
@@ -277,8 +279,8 @@ section {
 }
 
 .terms {
-    margin: 30px 1px 0 0;
-    padding: 52px;
+    margin: 45px 1px 0 0;
+    padding-left: 52px;
     font-size: 14px;
     line-height: 5px;
     color: #000;
